Increase thead z-index to prevent page content overlapping sticky header

--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,7 @@ table {
 thead {
     position: sticky;
     top: 42px; /* offset below sticky tab-bar */
-    z-index: 10;
+    z-index: 50;
 }
 
 th {
